# packages/shared/schema/openapi.json
@@ -3195,6 +3195,17 @@
           "topic": {
             "title": "Topic",
             "type": "string"
+          },
+          "topic_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Topic Id"
           }
         },
         "required": [
